fix circle cropping issue

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -26,13 +26,13 @@ button:hover {
 
 .bottom-container,
 .top-container {
-	width: 70vw;
-	height: 40vh;
+	width: 100%;
+	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	position: absolute;
-	top: 35vh;
+
 	right: 0;
 	padding: 1vw;
 }
@@ -58,10 +58,10 @@ button:hover {
 @keyframes circleMove {
 	0%,
 	100% {
-		clip-path: circle(20% at 80% 50%);
+		clip-path: circle(20% at 60% 50%);
 	}
 	50% {
-		clip-path: circle(20% at 20% 50%);
+		clip-path: circle(20% at 40% 50%);
 	}
 }
 a {
@@ -101,6 +101,7 @@ main {
 
 .sidenav,
 .topnav,
+.topnav.active,
 .top {
 	display: none;
 }
@@ -442,7 +443,8 @@ video {
 	.topnav a:hover {
 		color: #f1f1f1;
 	}
-	.sidenav {
+	.sidenav,
+	.sidenav.active {
 		width: 0px;
 	}
 
@@ -465,10 +467,10 @@ video {
 	@keyframes circleMove {
 		0%,
 		100% {
-			clip-path: circle(20% at 80% 50%);
+			clip-path: circle(20% at 70% 50%);
 		}
 		50% {
-			clip-path: circle(20% at 25% 50%);
+			clip-path: circle(20% at 40% 50%);
 		}
 	}
 
